# ocaml-emoji

./: .gitignore  .merlin  .ocamlformat  LICENSE.md  README.md  _oasis  dune  dune-project  emoji.opam
.github/workflows/: build.yml  deploy.yml
doc/: dune  index.mld
docs/: Emoji.html  gh-pages-publish.sh  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  style.css  type_Emoji.html
example/: dune  example.ml
gencode/: dune  gencode.ml  main.ml  updatelist.ml
lib/: dune  emoji.ml
opam/: descr  opam
src/: dune  emoji.ml  gencode.ml  updatelist.ml
test/: dune  test.ml
